# py_nullable

./: .gitignore  LICENSE  README.md  dev_requirements.txt  doc_requirements.txt  genindex.html  index.html  modules.html  objects.inv  py_nullable.html  pyproject.toml  pytest.ini  pytest.xml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree  py_nullable.doctree
.github/workflows/: readme_cache_clear.yaml  release.yaml  test.yaml  test_expand_python_version.yaml  update_sphinxdoc.yaml
docs/: conf.py  index.rst
docs/_build/html/: .buildinfo  genindex.html  objects.inv  py-modindex.html  py_nullable.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree  py_nullable.doctree
docs/_build/html/_sources/: modules.rst.txt  py_nullable.rst.txt
py_nullable/: __init__.py  decorator.py  exception.py  nullable.py
tests/: __init__.py  test_nullable.py
