[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "py_nullable"
description = "Python's None Wrapper, inspired by java.lang.Optional"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.setuptools.package-data]
"py_nullable" = ["py.typed"]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "py_nullable.__version__.__version__"}

[tool.flake8]
max-line-length = 80

